--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -51,7 +51,7 @@
     {% if latest_question_list %}
     <ul>
         {% for question in latest_question_list %}
-        <li><a href="/polls/{{ question.question_id }}/">{{ question.question_text }}</a></li>
+        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
         {% endfor %}
     </ul>
     {% else %}
