--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -5,8 +5,16 @@
     <meta charset="utf-8">
     <title>{{ question.question_text }}</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f7f7f7;
+        }
+         h1 {
+            text-align: left;
+            margin: 50px 50px 0px 50px;
+        }
         form {
-            margin-top: 30px;
+            margin: 0px 0px 50px 50px;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
@@ -37,15 +45,40 @@
         input[type="submit"]:hover {
             background-color: #3e8e41;
         }
+
+        a{
+            
+            margin-left: 50px;
+            background-color: #452c9f;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
     </style>
 </head>
 
 <body>
-    <h1>{{ question.question_text }}</h1>
-    {% if error_message %}
-    <p>{{ error_message }}</p>
-    {% endif %}
-    <a href="/polls/">Back to polls</a>
+    <h1>My Polls</h1>
+    <form action="{% url 'polls:vote' question.id %}" method="post">
+        {% csrf_token %}
+        <fieldset>
+            <legend>
+                <h1>{{ question.question_text }}</h1>
+            </legend>
+            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+            {% for choice in question.choice_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+            {% endfor %}
+        </fieldset>
+        <input type="submit" value="Vote">
+    </form>
+    <a href="{% url 'polls:index' %}">Back to polls</a>
 </body>
 
 </html>
